# cloudformation-templates

./: .deepsource.toml  .gitignore  .sample.env  CHECKLIST.md  PR_TEMPLATE.md  README.md  TODO.md  TODOS.md  apigateway-example-template.yml  azure-pipelines.yml  batch-associate-approval-rule.txt  cloudfront-route53-template.yml  create-approval-rule-template.txt  deployments.yml  iam.yml  master-template.yml  predeployments.yml  repo.yml  requirements.txt  setup.cfg  ssm-roles-managedinstance-rds.yml  vpc-subnets-basic.yml
deploy/: deployer.py  deployments.yml  settings.py
docs/: CHECKLIST.md  TODOS.md
ecr/: ecr.yml
env/: .sample.env
env/json/: replication-task-settings.json  table-mappings.json
examples/: ecs-frontend-backend.yml  s3-cloudfront-distro.yml  sonarqube.yml
gateway/: gateway.yml
iam/: iam.yml  pipeline-user.yml  users.yml
json/: replication-task-settings.json  table-mappings.json
lambda/: lambda.yml
python/: MANIFEST.in  README.md  requirements-dev.txt  setup.cfg
python/src/cf_deploy/: main.py
python/src/cf_deploy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/src/cf_deploy/deploy/: deployer.py  settings.py
python/src/cf_deploy/templates/: cloudfront.yml  cognito.yml  lambda.yml
python/src/cf_deploy/tests/: test_deploy.py
rds/: rds.yml
scripts/: clear-buckets  dns-stack  ecr-stack  frontend-stack  gateway-stack  get-sonar-host  install  lambda-stack  lint  policy-stack  rds-host-secret  rds-stack  scan  user-stack  users-stack  vpc-stack
scripts/aws/: clear-app-buckets  clear-app-ecrs  clone-bb-repos  create-branch-rules  get-sonar-host  init-coverage-buckets  invalidate-cache  retrieve-cloudfront-id
scripts/secrets/: secret-api-creds  secret-api-key  secret-atlassian-oauth  secret-atlassian-token  secret-aws-creds  secret-rds-creds  secret-rds-host  secret-snyk-token  secret-sonar-creds  secret-sonar-host  secret-sonar-token
scripts/stacks/: account-stack  devops-stack  (+9 more)
src/: README.md  build-requirements.txt  requirements.txt  setup.cfg
src/cf_deploy/: main.py
src/cf_deploy/cf_deploy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/cf_deploy/deploy/: deployer.py  settings.py
src/cf_deploy/templates/: qldb.yml
src/cf_deploy/util/: logger.py
src/deploy/: deployer.py  settings.py
src/innolab/: main.py
src/innolab/deploy/: deployer.py  settings.py
src/innolab/innolab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/innolab/templates/: iam.yml  rds.yml  repo.yml
src/innolab/templates/applications/: alation.yml  migration.yml
src/innolab/templates/services/: .sample.private-service.yml  .sample.public-service.yml  alation.yml
src/innolab/tests/: test_deploy.py
src/innolab/util/: logger.py
templates/: cloudfront.yml  cognito.yml  ecs.yml  events.yml  iam.yml  lambda.yml  rds.yml  repo.yml  vpc.yml
vpc/: vpc.yml
(+102 files in other folders)
