[metadata]
name = cf_deploy
url = https://github.com/chinchalinchin/cf-deploy
version = file: version.txt
author = Grant Moore
author_email = grant@cumberland-cloud.ccom
description = a command line utility for automating AWS CloudFormation deployments
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = aws, cloudformation, boto3, infrastructure-as-code, automated deployments, azure
classifers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/chinchalinchin/cf-deploy
    
[options]
python_requires = >= 3.8
package_dir=
    =src
packages=find:
install_requires =
    boto3 >=1.21.21
    pyyaml >=6.0
include_package_data = True

[options.entry_points]
console_scripts =
    cf-deploy = cf_deploy.main:entrypoint

[options.packages.find]
where=src