[metadata]
name = innolab-deploy
url = https://innolab-coverage.makpar-innovation.net
version = file: version.txt
author = Makpar Innovation Laboratory
author_email = gmoore@makpar.com
description = a command line utility for automating AWS CloudFormation deployments
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = aws, cloudformation, boto3, infrastructure-as-code, automated deployments, azure
classifers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/Makpar-Innovation-Laboratory/cloudformation
    
[options]
python_requires = >= 3.8
package_dir=
    =deploy
packages=find:
install_requires =
    boto3 >=1.21.21
    pyyaml >=6.0
    python-dotenv >=0.19.2
include_package_data = True

[options.entry_points]
console_scripts =
    innolab_deploy = deploy.deployer:deploy

[options.packages.find]
where=deploy